# spoonbender2

./: .gitignore  CLAUDE.md  Cargo.toml  LLMS.md  README.md
docs/: ARCHITECTURE.md  CLI_USAGE.md  GLYPH_RENDERING.md  PLACEHERO_STRUCTURE.txt  PROGRESS.md  QUICK_REFERENCE.md  REFACTORING_SUMMARY.md  RESPONSIVE_GRID_LIMITATION.md  RUNEBENDER_PORT_PLAN.md  SCROLLBAR_CUSTOMIZATION_ISSUE.md  SCROLLBAR_ISSUE.md  STATUS.md  USAGE.md  XILEM_0_3_VS_0_4_COMPARISON.md  XILEM_0_4_API_GUIDE.md  XILEM_0_4_EXAMPLE.rs  XILEM_0_4_QUICK_REFERENCE.md  XILEM_0_4_SUMMARY.txt  XILEM_0_4_UPGRADE.md  XILEM_ARCHITECTURE.md  XILEM_CODE_PATTERNS.md  XILEM_DOCS_INDEX.md  XILEM_DOCUMENTATION_INDEX.md  XILEM_LABEL_TEXT_COLOR_ISSUE.md
src/: actions.rs  coord_pane_widget.rs  cubic_path.rs  data.rs  edit_session.rs  edit_type.rs  edit_types.rs  editor_widget.rs  entity_id.rs  glyph_renderer.rs  glyph_widget.rs  hit_test.rs  lib.rs  main.rs  mouse.rs  path.rs  path_segment.rs  point.rs  point_list.rs  quadrant.rs  quadratic_path.rs  segment.rs  selection.rs  settings.rs  theme.rs  toolbar.rs  toolbar_widget.rs  undo.rs  viewport.rs  welcome.rs  workspace.rs
src/components/: coordinate_panel.rs  edit_mode_toolbar.rs  editor.rs  editor_canvas.rs  glyph_preview_widget.rs  grid_toolbar.rs  mod.rs  toolbar.rs  toolbars.rs  workspace_toolbar.rs
src/tools/: mod.rs  pen.rs  preview.rs  select.rs
src/views/: editor.rs  glyph_grid.rs  mod.rs  welcome.rs
src/widgets/: coord_pane.rs  editor.rs  glyph.rs  grid_toolbar.rs  mod.rs  toolbar.rs
